Add a Share to Post intent Create a separate Share and Visio activity Fix the Notification system for newer Android versions Update to 0.18.0.0 (13)

--- a/Movim/src/main/res/values/strings.xml
+++ b/Movim/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Movim</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="share_new_post">New post</string>
+    <string name="call">Movim • Call</string>
 </resources>
